# Defi-engine

./: .gitignore  AGENTS.md  README.md  alembic.ini  prd.json  progress.txt  pyproject.toml  qodana.yaml
.ai/: README.md  profiles.toml
.codex/: config.toml  hooks.json
AGENTS/: engineering-flow.md  jetbrains-mcp-workspace.md  memory-hindsight.md  strategy-policy.md  trader-doctrine.md
docs/: README.md
graphify-out/: GRAPH_REPORT.md  graph.json
rust/: Cargo.toml
rust/crates/d5v/: Cargo.toml
rust/crates/d5v/src/: commands.rs  main.rs
rust/crates/d5v/tests/: d5v_tests.rs
tests/: __init__.py  conftest.py  test_adapters.py  test_backtest_truth.py  test_backtest_walk_forward.py  test_capture_lane_status.py  test_cli.py  test_condition_scoring.py  test_config.py  test_docs_contract.py  test_execution_intent_owner.py  test_helius_ws_client.py  test_improvement_proposals.py  test_integration_helius.py  test_integration_jupiter.py  test_label_strategy_loop.py  test_live_regime_cycle.py  test_massive_backfill.py  test_micro_live.py  test_migrations.py  test_model_adapters.py  test_orchestration_contract.py  test_paper_practice_loop.py  test_paper_runtime_operator.py  test_policy_global_regime_v1.py  test_profile_governor.py  test_realized_feedback.py  test_regime_model_compare.py  test_reporting_artifacts.py  test_reporting_qmd.py  test_research_profiles.py  test_risk_global_regime_v1.py  test_runtime_diagnostics.py  test_settlement_paper.py  test_shadow_runner.py  test_supervisor_monitoring_contract.py  test_training_automation.py  test_training_events.py  (+3 more)
(+289 files in other folders)
