[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d5engine"
version = "0.1.0"
description = "Crypto-focused data-capture + canonical SQL + research-ready engine (paper-only)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "click>=8.1",
    "structlog>=24.0",
    "fredapi>=0.5",
    "orjson>=3.10",
    "duckdb>=1.1",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]

[project.scripts]
d5 = "d5_trading_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/d5_trading_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
